<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/control_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:text="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/startServiceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@android:color/white"
            android:textSize="20dp"
            android:textColor="@color/selector_txt_button"
            android:text="@string/start_service" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/restartServiceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@android:color/white"
            android:textSize="20dp"
            android:textColor="@color/selector_txt_button"
            android:text="@string/restart_service" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/stopServiceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@android:color/white"
            android:textSize="20dp"
            android:textColor="@color/selector_txt_button"
            android:text="@string/stop_service" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/helpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@android:color/white"
            android:textSize="20dp"
            android:textColor="@color/selector_txt_button"
            android:text="@string/help" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/contactBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@android:color/white"
            android:textSize="20dp"
            android:textColor="@color/selector_txt_button"
            android:text="@string/contact" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/serviceStatusLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:gravity="right"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="25sp"
                android:text="@string/svcstatus_label" />

            <TextView
                android:id="@+id/serviceStatusView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:singleLine="true"
                android:textSize="25sp"
                android:textColor="@color/skyblue"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Off"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/devNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:layout_gravity="right"
                android:gravity="right"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="25sp"
                android:text="@string/devname_label" />

            <TextView
                android:id="@+id/devNameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:focusable="true"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="25sp"
                android:textColor="@color/selector_txt_devname"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

    </LinearLayout>

</LinearLayout>
